<resources>
    <string name="app_name">SEHM</string>

    <!--LoginActivity strings-->
    <string name="login">Log in</string>
    <string name="callAPIWithToken">Call API with Token</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Auth0 strings-->
    <string name="com_auth0_client_id">NTIW1Y2FqDAQP8Op4gD9UjGavzoYRoji</string>
    <string name="com_auth0_domain">sehm.eu.auth0.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userDetailslTitle">Tell us about yourself</string>
    <string name="userDetailsQ1">Do you take medications? Do you suffer from depression?</string>
    <string name="userDetailsQ2">Do you have financial pressure?</string>
    <string name="userDetailsQ3">Do you have emotional support?</string>

    <string-array name="spinnerItems">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="userDetailsQ6">Age</string>
    <string name="EULA">End-User License Agreement (EULA) of SEHM This End-User License Agreement (EULA) is a legal agreement between you and Goliath This EULA agreement governs your acquisition and use of our SEHM software (Software) directly from Goliath or indirectly through a Goliath authorized reseller or distributor (a Reseller). Please read this EULA agreement carefully before completing the installation process and using the SEHM software. It provides a license to use the SEHM software and contains warranty information and liability disclaimers. If you register for a free trial of the SEHM software, this EULA agreement will also govern that trial. By clicking acceptor installing and/or using the SEHM software, you are confirming your acceptance of the Software and agreeing to become bound by the terms of this EULA agreement. If you are entering into this EULA agreement on behalf of a company or other legal entity, you represent that you have the authority to bind such entity and its affiliates to these terms and conditions. If you do not have such authority or if you do not agree with the terms and conditions of this EULA agreement, do not install or use the Software, and you must not accept this EULA agreement. This EULA agreement shall apply only to the Software supplied by Goliath herewith regardless of whether other software is referred to or described herein. The terms also apply to any Goliath updates, supplements, Internet-based services, and support services for the Software, unless other terms accompany those items on delivery. If so, those terms apply. License Grant Goliath hereby grants you a personal, non-transferable, non-exclusive licence to use the SEHM software on your devices in accordance with the terms of this EULA agreement. You are permitted to load the SEHM software (for example a PC, laptop, mobile or tablet) under your control. You are responsible for ensuring your device meets the minimum requirements of the SEHM software. You are not permitted to: - Edit, alter, modify, adapt, translate or otherwise change the whole or any part of the Software nor permit the whole or any part of the Software to be combined with or become incorporated in any other software, nor decompile, disassemble or reverse engineer the Software or attempt to do any such things - Reproduce, copy, distribute, resell or otherwise use the Software for any commercial purpose - Allow any third party to use the Software on behalf of or for the benefit of any third party - Use the Software in any way which breaches any applicable local, national or international law - use the Software for any purpose that Goliath considers is a breach of this EULA agreement Intellectual Property and Ownership Goliath shall at all times retain ownership of the Software as originally downloaded by you and all subsequent downloads of the Software by you. The Software (and the copyright, and other intellectual property rights of whatever nature in the Software, including any modifications made thereto) are and shall remain the property of Goliath. Goliath reserves the right to grant licences to use the Software to third parties. Termination This EULA agreement is effective from the date you first use the Software and shall continue until terminated. You may terminate it at any time upon written notice to Goliath. This EULA was created by eulatemplate.com for SEHM It will also terminate immediately if you fail to comply with any term of this EULA agreement. Upon such termination, the licenses granted by this EULA agreement will immediately terminate and you agree to stop all access and use of the Software. The provisions that by their nature continue and survive will survive any termination of this EULA agreement. Governing Law This EULA agreement, and any dispute arising out of or in connection with this EULA agreement, shall be governed by and construed in accordance with the laws of Malta.</string>
    <string name="gender">Gender</string>
    <string name="accept_and_continue">Accept and continue</string>
    <string name="friends">Friends</string>
    <string name="food">Food</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="name">Name</string>
    <string name="quantity">Portions</string>
    <string name="calories">Calories per portion</string>
    <string name="update_details">Update details</string>
    <string name="cont">Continue</string>
    <string name="eatingPreferences">Eating within these hours will result in a higher score</string>
    <string name="calories_week">Calories consumed this week:</string>
    <string name="calories_daily">Calories consumed today:</string>
    <string name="points_earned_this_week">Points earned this week:</string>
    <string name="overview">Overview</string>
    <string name="points_earned_today">Points earned today:</string>
    <string name="add_food">Add food</string>
    <string name="food_name">Food name</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="score_today">Score Today</string>
    <string name="score_this_week">Score this week</string>
    <string name="score">Score</string>
    <string name="initial_calibration">Initial Calibration</string>
    <string name="calibration_text"></string>
    <string name="not_recording">Not recording</string>
</resources>
