<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/home"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/food"
            android:title="@string/food" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/account_multiple"
            android:title="@string/friends" />

    </group>

    <!--<item android:title="@string/settings">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_preferences"-->
                <!--android:icon="@drawable/tune"-->
                <!--android:title="@string/preferences" />-->
        <!--</menu>-->
    <!--</item>-->
</menu>
