<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gabrieltechnologies.sehm.LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/userDetailslTitle"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toStartOf="@+id/question1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/question1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/roboto"
        android:text="@string/userDetailsQ1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/question2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <TextView
        android:id="@+id/question2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/userDetailsQ2"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question1" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/question2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch2" />

    <TextView
        android:id="@+id/question3"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/userDetailsQ3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question2" />


    <EditText
        android:id="@+id/age"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/userDetailsQ6"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/genderSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch3" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="151dp"
        android:layout_height="47dp"
        android:layout_marginEnd="51dp"
        android:layout_marginTop="32dp"
        android:entries="@array/spinnerItems"
        android:text="@string/gender"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question3" />

    <Button
        android:id="@+id/submitBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/accept_and_continue"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/EULA"
        android:layout_width="304dp"
        android:layout_height="76dp"
        android:layout_marginTop="32dp"
        android:scrollbars="vertical"
        android:text="@string/EULA"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderSpinner" />

</android.support.constraint.ConstraintLayout>
