<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gabrieltechnologies.sehm.DashboardActivity">


    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="gabrieltechnologies.sehm.DashboardActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/overview"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/stat1"
            android:layout_width="141dp"
            android:layout_height="40dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/roboto"
            android:text="@string/points_earned_today"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/stat1Value"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginEnd="44dp"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/roboto"
            android:text="0"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/stat2"
            android:layout_width="156dp"
            android:layout_height="40dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/points_earned_this_week"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stat1" />

        <TextView
            android:id="@+id/stat2Value"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginEnd="44dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="0"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stat1Value" />

        <TextView
            android:id="@+id/stat3"
            android:layout_width="163dp"
            android:layout_height="40dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/calories_daily"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stat2" />

        <TextView
            android:id="@+id/stat3Value"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginEnd="44dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="0"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stat2Value" />

        <TextView
            android:id="@+id/stat4"
            android:layout_width="173dp"
            android:layout_height="40dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/calories_week"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stat3" />

        <TextView
            android:id="@+id/stat4Value"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginEnd="44dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="0"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stat3Value" />

        <TextView
            android:id="@+id/currStatus"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="88dp"
            android:fontFamily="@font/roboto_medium"
            android:text="Loading..."
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
