<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gabrieltechnologies.sehm.DashboardActivity">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:src="@drawable/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="gabrieltechnologies.sehm.DashboardActivity"
        tools:layout_editor_absoluteX="143dp">

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#eaeaea">

            <!--<RelativeLayout-->
            <!--android:id="@+id/RelativeLayout1"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="fill_parent"-->
            <!--android:layout_gravity="center"-->
            <!--android:orientation="vertical">-->

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/table_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:id="@+id/row_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/name" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/calories" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/quantity" />
                </TableRow>
            </TableLayout>
            <!--</RelativeLayout>-->
        </ScrollView>

    </FrameLayout>
</android.support.constraint.ConstraintLayout>